--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -78,4 +78,8 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Сотрудничество
 					+button("Перейти", "article.html")
-
+		.row
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Контакты магазинов
+					+button("Перейти", "contacts.html")
