--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -106,6 +106,8 @@
 			+linkLeftPanel("Магазины", "../shops.html")
 
 			+linkLeftPanel("Сотрудничество", "../article.html")
+			+linkLeftPanel("Контакты магазинов", "../contacts.html")
+
 
 
 
