Отредактированы отступы, изменена сетка на десктопеXL и мобиле.

--- a/src/less/blocks/_form-contact-page.less
+++ b/src/less/blocks/_form-contact-page.less
@@ -1,3 +1,18 @@
+.contact-page__title {
+	font-size: 24px;
+	color: @title;
+	text-transform: uppercase;
+	padding-bottom: 8px;
+	@media @tablet {
+		padding-bottom: 12px;
+	}
+	@media @desktop {
+		font-size: 28px;
+	}
+	@media @desktopXL {
+		padding-bottom: 25px;
+	}
+}
 .form-contact-page__textarea-wrapper {
 	position: relative;
 	padding-bottom: 11px;
@@ -45,6 +60,7 @@
 .form-contact-page__title {
 	font-size: 18px;
 	padding-bottom: 16px;
+	color: @text-light-grey;
 	@media @desktop {
 		font-size: 22px;
 		padding-bottom: 19px;
