Добавлен отступ сверху для текста в textarea

--- a/src/less/blocks/_form-contact-page.less
+++ b/src/less/blocks/_form-contact-page.less
@@ -27,6 +27,7 @@
 	font-size: 14px;
 	color: @active-checkbox;
 	padding-left: 15px;
+	padding-top: 15px;
 	height: 116px;
 	&:focus, &:active {
 		border: 1px solid @active-checkbox;
