--- a/src/less/blocks/_form-contact-page.less
+++ b/src/less/blocks/_form-contact-page.less
@@ -72,6 +72,9 @@
 	font-size: 12px;
 	color: @text-light-grey;
 	padding-top: 14px;
+	padding-left: 35px;
+	padding-right: 35px;
+	padding-bottom: 35px;
 	p {
 		margin:0;
 		line-height: 1.2;
