edit margin-bottom for text block

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -80,6 +80,7 @@
 @import "pages/account-orders";
 @import "pages/shops";
 @import "pages/article-page";
+@import "pages/contacts-page.less";
 
 // Utils - Always Last - !IMPORTANT
 @import "utils/_margins";
