--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -6,6 +6,8 @@
 	bottom:0;
 	z-index:2000;
 	width: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
 	
 	@media (min-width: 784px) {
 		width: 360px;
@@ -37,7 +39,8 @@
 	top: 0;	
 	background-color: #fff;
 	z-index: 1;
-	 @media (min-width: 784px){width: 360px;}
+	 @media @tablet {width: 360px;}
+	 @media @desktop {position: absolute;}
 }
 
 .close-selection{
