set fix size of the image wrapper

--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -70,11 +70,15 @@ block content
 								.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-2.jpg")
 									img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-2.png" alt="Картикна товара")
 								
-								.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-3.jpg")
-									img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-3.png" alt="Картинка товара")
+								//- .thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-3.jpg")
+								.thumbnails__image(data-img-path = "../img/good_thumbnail/blue-purse/height.jpg")
+									//- img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-3.png" alt="Картинка товара")
+									img(src="../img/good_thumbnail/blue-purse/height.jpg" alt="Картинка товара")
 								
-								.thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.jpg")
-									img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-4.png" alt="Картикна товара")
+								//- .thumbnails__image(data-img-path = "../img/goods/purse_blue/blue-purse-4.jpg")
+								.thumbnails__image(data-img-path = "../img/good_thumbnail/blue-purse/width.jpg")
+									//- img(src="../img/good_thumbnail/blue-purse/thumb_blue-purse-4.png" alt="Картикна товара")
+									img(src="../img/good_thumbnail/blue-purse/width.jpg" alt="Картикна товара")
 					
 					//- Блок инфо + заказ
 					.col-md-6.col-lg-5.offset-xl-1.col-xl-5
