--- a/src/less/blocks/_photo-of-product.less
+++ b/src/less/blocks/_photo-of-product.less
@@ -1,34 +1,42 @@
 .product-photo__switch-block {
-	min-width: 344px; 
-	
-	@media @tablet {
-		min-width: 360px;
-	}
-	@media @desktop {
-		min-width: 524px;
-	}
+	// min-width: 344px;
+	// @media @tablet {// min-width: 360px;}
+	// @media @desktop {// min-width: 524px;}
 }
 
 .switch-block__main-photo {
-	min-height: 344px;
-	// min-width: 344px;
+	// min-height: 344px;
+	margin-left: auto;
+	margin-right: auto;
+	overflow:hidden;
+	position:relative;
+
+	width: 344px;
+	height: 344px; 
+
+	margin-bottom: 8px;
 
 	img {
-		margin-left: auto;
-		margin-right: auto;
+		margin: auto;
+		max-height: 100%;
+		max-width: 100%;
+		display: block;
+		position:absolute;
+		top:0; bottom:0;
+		left:0; right:0;
 	}
-	margin-bottom: 8px;
-	
-	@media @tablet {
-		min-height: 360px;
-		// min-width: 368px;
 
-		margin-bottom: 0;	
+	@media @tablet {
+		// min-height: 360px;
+		width: 360px;
+		height: 360px; 
+		// margin-bottom: 0;	
 	}
 	@media @desktop {
-		min-height: 524px;
-		// min-width: 524px;
-		margin-bottom: 0;	
+		// min-height: 524px;
+		width: 524px;
+		height: 524px; 
+		// margin-bottom: 0;	
 	}
 }
 
@@ -41,19 +49,32 @@
 .thumbnails__image {
 	border:1px solid @gray;
 	margin-right: 8px;
-	
+	width: 76px;
+	height: 76px;
+	overflow:hidden;
+	position:relative;
+
 	@media @tablet {
-		max-width: 76px;
+		// max-width: 76px;
 		margin-right: 16px;	
 	}
 	@media @desktop {
-		max-width: 100%;
+		width: 120px;
+		height: 120px;
+		// max-width: 100%;
 	}
 	&:last-child {
 		margin-right: 0;
-		
-		@media @tablet {
-			margin-right: 0;	
-		}	
+		@media @tablet {margin-right: 0;}	
+	}
+
+	img {
+		max-height: 100%;
+		max-width: 100%;
+		display: block;
+		position:absolute;
+		margin:auto;
+		top:0;bottom:0;
+		right: 0;left:0;
 	}
 } 
