--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -22,12 +22,20 @@ block content
 				.col-6.col-md-3
 					+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')(class="card-product--colorscheme")
 						+button-cart('В корзину','#')
-						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+						.colors-product
+							+colors-product__circle('col1.png')
+							+colors-product__circle('col2.png')
 
 				.col-6.col-md-3
 					+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 						+button-store('Нет в наличии','#')
-						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+						.colors-product
+							+colors-product__circle('col1.png')
+							+colors-product__circle('col2.png')
+							+colors-product__circle('col4.png')
+							+colors-product__circle('col5.png')
+							+colors-product__circle('col6.png')
+							+colors-product__circle('col8.png')
 		strong Карточка обычная 				
 		pre.
 			+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')
@@ -41,10 +49,18 @@ block content
 		pre.
 			+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')(class="card-product--colorscheme")
 				+button-cart('В корзину','#')
-				+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+				.colors-product
+					+colors-product__circle('col1.png')
+					+colors-product__circle('col2.png')
 		strong Карточка с лейблом -40% и  цветовой палитрой				
 		pre.
 			
 			+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 				+button-store('Нет в наличии','#')
-				+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+				.colors-product
+					+colors-product__circle('col1.png')
+					+colors-product__circle('col2.png')
+					+colors-product__circle('col4.png')
+					+colors-product__circle('col5.png')
+					+colors-product__circle('col6.png')
+					+colors-product__circle('col8.png')
