--- a/src/pug/pages/ui/sales_hits.pug
+++ b/src/pug/pages/ui/sales_hits.pug
@@ -23,9 +23,21 @@ block content
 					.col-6.col-md-3.order-md-4.order-lg-3
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#', 'Сумка большая, коллекция "Рига"', '1 990р.')
 							+button-store('Нет в наличии','#')
-							+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+							.colors-product
+								+colors-product__circle('col1.png')
+								+colors-product__circle('col2.png')
+								+colors-product__circle('col4.png')
+								+colors-product__circle('col5.png')
+								+colors-product__circle('col6.png')
+								+colors-product__circle('col7.jpg')
 
 					.col-6.col-md-3.order-md-3.order-lg-2
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#', 'Сумка большая, коллекция "Рига"', '4 893р.')
 							+button-cart('В корзину','#')
-							+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+							.colors-product
+								+colors-product__circle('col1.png')
+								+colors-product__circle('col2.png')
+								+colors-product__circle('col4.png')
+								+colors-product__circle('col5.png')
+								+colors-product__circle('col6.png')
+								+colors-product__circle('col7.jpg')
