fix filter colorschem

--- a/src/pug/pages/ui/filter.pug
+++ b/src/pug/pages/ui/filter.pug
@@ -48,18 +48,18 @@ block content
 					.filter-icon-close
 					ul.filter-menu-l2.font-size-null
 						li
-							+filter-color-checkbox('#FF7979')
-							+filter-color-checkbox('#6BAC89')
-							+filter-color-checkbox('#C3499E')
-							+filter-color-checkbox('#FFB047')
-							+filter-color-checkbox('#002D76')
-							+filter-color-checkbox('#AF674F')
-							+filter-color-checkbox('#FF7979')
-							+filter-color-checkbox('#6BAC89')
-							+filter-color-checkbox('#C3499E')
-							+filter-color-checkbox('#FFB047')
-							+filter-color-checkbox('#FF7979')
-							+filter-color-checkbox('#6BAC89')
+							+filter-color-checkbox('col1.png')
+							+filter-color-checkbox('col2.png')
+							+filter-color-checkbox('col5.png')
+							+filter-color-checkbox('col4.png')
+							+filter-color-checkbox('col6.png')
+							+filter-color-checkbox('col7.jpg')
+							+filter-color-checkbox('col9.png')
+							+filter-color-checkbox('col8.png')
+							+filter-color-checkbox('col10.png')
+							+filter-color-checkbox('col11.png')
+							+filter-color-checkbox('col1.png')
+							+filter-color-checkbox('col2.png')
 							
 				li ПО ЦЕНЕ
 					.filter-icon-close
