--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -3,7 +3,7 @@
 	width: 360px;
 	color: @textMenu;
 	line-height: 1;
-	text-align: center;
+	//text-align: center;
 
 	@media @desktop {
 		width: 270px;
@@ -15,6 +15,7 @@
 	.filter-label {
 		margin: 0; // margin-left: 8px;
 		cursor: pointer;
+		display: block;
 	}
 }
 
@@ -33,7 +34,12 @@
 		padding: 12px 0;
 	}
 }
+.filter-menu-block{
+	position: relative;
+	//padding-top: 20px;
+	//padding-bottom: 20px;
 
+}
 .filter__title {
 	font-size: 18px;
 	color: @textMenu;
@@ -41,6 +47,20 @@
 	@media @desktop {
 		color: @text-red;	
 		font-size: 20px;
+	}
+}
+.filter-menu-block__title{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 16px;
+	color:@textMenu;
+	text-transform: uppercase;
+	border-bottom:1px solid @borderMenu;
+	@media @desktop {
+		padding-top: 20px;
+		padding-bottom: 0;
+		margin-bottom: 20px;
+		border-bottom: 0px;
 	}
 }
 
@@ -115,7 +135,7 @@
 	padding: 0;
 	text-transform: none; // border-bottom:none;
 	color: @borderMenu;
-	padding: 8px 0;
+	//padding: 8px 0;
 
 	>li {
 		padding: 8px 0;
@@ -128,7 +148,11 @@
 }
 
 // Кастомный чекбокс
-.filter-checkbox-custom {
+.filter-checkbox-custom:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 2px;
 	display: inline-block;
 	width: 12px;
 	height: 12px;
@@ -138,21 +162,28 @@
 	background-repeat: no-repeat;
 	background-position: center -10px;
 	transition: 0.1s ease-out;
+	cursor:pointer;
+}
+.filter-span{
+	position: relative;
+	padding-left: 20px;
+	display: block;
+	@media @desktop{
+	margin-bottom: 19px;}	
 }
 
 .filter-checkbox {
-	display: none;
+	width: 0.1px;
+	height: 0.1px;
+
 }
 
-.filter-checkbox:checked~.filter-label-custom {
-	color: @textMenu;
-}
 
-.filter-checkbox:checked+.filter-checkbox-custom {
+
+.filter-checkbox.filter-checkbox-custom:checked:before {
 	background-position: center;
 	border-color: @textMenu;
 }
-
 
 // Кнопка сброс RESET
 .filter-reset {
@@ -187,7 +218,7 @@
 	border-radius: 50%;
 	cursor: pointer;
 	transition: all 0.2s;
-
+	margin-bottom: 9px;
 	&:hover {
 		transform: scale(1.1);
 	}
@@ -231,4 +262,9 @@
 
 .is-opened.filter-icon-close:after {
 	background-color: @textMenu;
+}
+.filter-menu-block{	
+	display: flex;
+	flex-direction: column;
+	padding-left: 10px;
 }
