add border-bottom for menu-block

--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -38,7 +38,8 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	
+	@media @desktop {
+	border-bottom: 1px solid @borderMenu;}
 }
 
 .filter__title {
