--- a/src/pug/mixins/_filter-menu.pug
+++ b/src/pug/mixins/_filter-menu.pug
@@ -12,7 +12,7 @@ mixin  filter-menu-checkbox (text)
 	label.filter-label 
 		span.filter-span
 			input.filter-checkbox.filter-checkbox-custom(type='checkbox')
-			| #{text}
+			span.filter-label-custom #{text}
 			
 mixin  filter-color-checkbox (color)
 	label.label-color-checkbox
