--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -39,60 +39,51 @@ block content
 										.filter__close-icon#filter__close-icon
 											+icon-close
 									+color-line(class="d-none d-lg-block")
-									ul.filter-menu-l1
-										li ПО ПОЛУ
+									.filter-menu-block
+										.filter-menu-block__title ПО ПОЛУ
 											.filter-icon-close
-											ul.filter-menu-l2
-												li
-													+filter-checkbox('Женщинам')
-												li
-													+filter-checkbox('Мужчинам')
-										li ПО КАТЕГОРИЯМ
+										.filter-submenu-block
+											+filter-menu-checkbox('Женщинам')
+											+filter-menu-checkbox('Мужчинам')
+									.filter-menu-block
+										.filter-menu-block__title ПО КАТЕГОРИЯМ
 											.filter-icon-close
-											ul.filter-menu-l2
-												li
-													+filter-checkbox('Кошельки')
-												li
-													+filter-checkbox('Сумки')
-												li
-													+filter-checkbox('Аксессуары')
-												li
-													+filter-checkbox('Офис и Тревел')
-										li ПО РАЗМЕРУ
+										.filter-submenu-block
+											+filter-menu-checkbox('Кошельки')
+											+filter-menu-checkbox('Сумки')
+											+filter-menu-checkbox('Аксессуары')
+											+filter-menu-checkbox('Офис и Тревел')
+									.filter-menu-block
+										.filter-menu-block__title ПО РАЗМЕРУ
 											.filter-icon-close
-											ul.filter-menu-l2
-												li
-													+filter-checkbox('Большой')
-												li
-													+filter-checkbox('Малый')
-												li
-													+filter-checkbox('Средний')
-										li ПО ЦВЕТУ
+										.filter-submenu-block
+											+filter-menu-checkbox('Большой')
+											+filter-menu-checkbox('Малый')
+											+filter-menu-checkbox('Средний')
+									.filter-menu-block
+										.filter-menu-block__title ПО ЦВЕТУ
 											.filter-icon-close
-											ul.filter-menu-l2.font-size-null
-												li
-													+filter-color-checkbox('#FF7979')
-													+filter-color-checkbox('#6BAC89')
-													+filter-color-checkbox('#C3499E')
-													+filter-color-checkbox('#FFB047')
-													+filter-color-checkbox('#002D76')
-													+filter-color-checkbox('#AF674F')
-													+filter-color-checkbox('#FF7979')
-													+filter-color-checkbox('#6BAC89')
-													+filter-color-checkbox('#C3499E')
-													+filter-color-checkbox('#FFB047')
-													+filter-color-checkbox('#FF7979')
-													+filter-color-checkbox('#6BAC89')
-													
-										li ПО ЦЕНЕ
+										.filter-submenu-block.font-size-null.pb-10
+											+filter-color-checkbox('#FF7979')
+											+filter-color-checkbox('#6BAC89')
+											+filter-color-checkbox('#C3499E')
+											+filter-color-checkbox('#FFB047')
+											+filter-color-checkbox('#002D76')
+											+filter-color-checkbox('#AF674F')
+											+filter-color-checkbox('#FF7979')
+											+filter-color-checkbox('#6BAC89')
+											+filter-color-checkbox('#C3499E')
+											+filter-color-checkbox('#FFB047')
+											+filter-color-checkbox('#FF7979')
+											+filter-color-checkbox('#6BAC89')
+
+									.filter-menu-block
+										.filter-menu-block__title ПО цене
 											.filter-icon-close
-											ul.filter-menu-l2
-												li
-													+filter-checkbox('До 2 000р.')
-												li
-													+filter-checkbox('От 5 000р. до 10 000р.')
-												li
-													+filter-checkbox('От 10 000р.')
+										.filter-submenu-block
+											+filter-menu-checkbox('До 2 000р.')
+											+filter-menu-checkbox('От 5 000р. до 10 000р.')
+											+filter-menu-checkbox('От 10 000р.')
 
 									+button-apply('Применить', '#')
 									label.filter-reset Очисить фильтр
