--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -3,9 +3,13 @@
 	width: 360px;
 	color: @textMenu;
 	line-height: 1;
-	// text-align: center;
+	
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 
 	@media @desktop {
+		display: block;
 		width: 270px;
 	}
 
@@ -22,6 +26,11 @@
 			}
 		}
 	}
+}
+
+// Wrapper чтобы располодить кнопки меню внизу на мобильном варианте
+.filter-items-wrapper {
+	flex: 1;
 }
 
 // Заголовок формы
@@ -116,10 +125,10 @@
 	text-transform: none; // border-bottom:none;
 	color: @borderMenu;
 	// padding-left: 26px;
-	padding: 14px 0 8px 26px;
+	padding: 14px 0 14px 26px;
 	
 	@media @desktop {
-		display: block;
+		display: block !important;
 		padding-left: 0px;
 		border-bottom: 1px solid @borderMenu;
 	} 
@@ -148,8 +157,6 @@
 	padding-left: 20px;
 	display: block;
 	margin-bottom: 20px;
-
-	// @media @desktop{margin-bottom: 19px;}	
 }
 
 .filter-checkbox {
@@ -208,8 +215,8 @@
 	0 0 0 3px @color-11;
 }
 
-// Иконка крестик
-.filter-icon-close {
+// Иконка плюс-минус
+.filter-item-toggle {
 	&:before {
 		content: "+";
 		position: absolute;
@@ -231,42 +238,11 @@
 	@media @desktop {display: none;}
 }
 
-// класс для открытия/закрытия иконки
-.is-opened.filter-icon-close:before {
+// класс для открытия/закрытия иконки 
+.is-opened.filter-item-toggle:before {
 	content: '';
 }
 
-.is-opened.filter-icon-close:after {
+.is-opened.filter-item-toggle:after {
 	background-color: @textMenu;
 }
-
-
-
-// Меню 1 уровня
-// .filter-menu-l1 {
-// 	margin: 0;
-// 	padding: 0 0;
-// 	text-transform: uppercase;
-// 	text-align: left;
-// 	// >li {
-// 	// 	position: relative;
-// 	// 	padding: 12px 16px;
-// 	// 	cursor: pointer;
-// 	// 	border-bottom: 1px solid @borderMenu; // отступ от кнопки
-// 	// 	&:last-child {
-// 	// 		margin-bottom: 94px;
-// 	// 	}
-
-// 	// 	@media @desktop {
-// 	// 		padding: 16px 8px 0px 8px;
-// 	// 		border: none;
-
-// 	// 		&:last-child {
-// 	// 			margin-bottom: 22px;
-// 	// 		}
-// 	// 	} // Убрать border у послденего
-// 	// 	&:last-child .filter-menu-l2 {
-// 	// 		border-bottom: none;
-// 	// 	}
-// 	// }
-// }
