add title for color image

--- a/src/pug/mixins/_filter-menu.pug
+++ b/src/pug/mixins/_filter-menu.pug
@@ -8,8 +8,8 @@ mixin  filter-checkbox (text)
 		span.filter-checkbox-custom
 		span.filter-label-custom #{text}	
 
-mixin  filter-color-checkbox (imgSrc)
+mixin  filter-color-checkbox (imgSrc, titleText)
 	label.label-color-checkbox
 		input(type='checkbox')
 		.filter-color-checkbox
-			img(src="../img/good_colors/"+ imgSrc, alt="color")
+			img(src="../img/good_colors/"+ imgSrc, alt="color" title=""+ titleText)
