--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -71,18 +71,18 @@ block content
 											.filter-icon-close
 											ul.filter-menu-l2.font-size-null
 												li
-													+filter-color-checkbox('col1.png')
-													+filter-color-checkbox('col2.png')
-													+filter-color-checkbox('col5.png')
-													+filter-color-checkbox('col4.png')
-													+filter-color-checkbox('col6.png')
-													+filter-color-checkbox('col7.jpg')
-													+filter-color-checkbox('col9.png')
-													+filter-color-checkbox('col8.png')
-													+filter-color-checkbox('col10.png')
-													+filter-color-checkbox('col11.png')
-													+filter-color-checkbox('col1.png')
-													+filter-color-checkbox('col2.png')
+													+filter-color-checkbox('col1.png', 'черный/аллюр')
+													+filter-color-checkbox('col2.png', 'черный/аллюр')
+													+filter-color-checkbox('col5.png', 'черный/аллюр')
+													+filter-color-checkbox('col4.png', 'черный/аллюр')
+													+filter-color-checkbox('col6.png', 'черный/аллюр')
+													+filter-color-checkbox('col7.jpg', 'черный/аллюр')
+													+filter-color-checkbox('col9.png', 'черный/аллюр')
+													+filter-color-checkbox('col8.png', 'черный/аллюр')
+													+filter-color-checkbox('col10.png', 'черный/аллюр')
+													+filter-color-checkbox('col11.png', 'черный/аллюр')
+													+filter-color-checkbox('col1.png', 'черный/аллюр')
+													+filter-color-checkbox('col2.png', 'черный/аллюр')
 													
 										li ПО ЦЕНЕ
 											.filter-icon-close
@@ -129,49 +129,49 @@ block content
 								+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 									+button-cart('В корзину','#')
 									.colors-product
-										+colors-product__circle('col1.png')
-										+colors-product__circle('col2.png')
-										+colors-product__circle('col6.png')
-										+colors-product__circle('col4.png')
+										+colors-product__circle('col1.png', 'черный/аллюр')
+										+colors-product__circle('col2.png', 'черный/аллюр')
+										+colors-product__circle('col6.png', 'черный/аллюр')
+										+colors-product__circle('col4.png', 'черный/аллюр')
 							.col-6.col-sm-6.col-md-3.col-lg-4
 								+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 									+button-cart('В корзину','#')
 									.colors-product
-										+colors-product__circle('col1.png')
-										+colors-product__circle('col2.png')
-										+colors-product__circle('col8.png')
+										+colors-product__circle('col1.png', 'черный/аллюр')
+										+colors-product__circle('col2.png', 'черный/аллюр')
+										+colors-product__circle('col8.png', 'черный/аллюр')
 							.col-6.col-sm-6.col-md-3.col-lg-4
 								+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#','Кошелек для монет N/S|Морской пейзаж"', '4 863р.')
 									+button-store('Нет в наличии','#')
 									.colors-product
-										+colors-product__circle('col1.png')
-										+colors-product__circle('col2.png')
-										+colors-product__circle('col5.png')
-										+colors-product__circle('col8.png')
-										+colors-product__circle('col6.png')
-										+colors-product__circle('col7.jpg')
+										+colors-product__circle('col1.png', 'черный/аллюр')
+										+colors-product__circle('col2.png', 'черный/аллюр')
+										+colors-product__circle('col5.png', 'черный/аллюр')
+										+colors-product__circle('col8.png', 'черный/аллюр')
+										+colors-product__circle('col6.png', 'черный/аллюр')
+										+colors-product__circle('col7.jpg', 'черный/аллюр')
 							.col-6.col-sm-6.col-md-3.col-lg-4
 								+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')
 									+button-cart('В корзину','#')
 									.colors-product
-										+colors-product__circle('col1.png')
-										+colors-product__circle('col2.png')
+										+colors-product__circle('col1.png', 'черный/аллюр')
+										+colors-product__circle('col2.png', 'черный/аллюр')
 							.col-6.col-sm-6.col-md-3.col-lg-4
 								+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#','Кошелек для монет N/S|Морской пейзаж', '4 863р.')
 									+button-store('Нет в наличии','#')
 									.colors-product
-										+colors-product__circle('col1.png')
+										+colors-product__circle('col1.png', 'черный/аллюр')
 										
 							.col-6.col-sm-6.col-md-3.col-lg-4
 								+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#','Сумка большая, коллекция "Рига"', '4 863р.')
 									+button-cart('В корзину','#')
 									.colors-product
-										+colors-product__circle('col1.png')
-										+colors-product__circle('col2.png')
-										+colors-product__circle('col5.png')
-										+colors-product__circle('col8.png')
-										+colors-product__circle('col6.png')
-										+colors-product__circle('col7.jpg')
+										+colors-product__circle('col1.png', 'черный/аллюр')
+										+colors-product__circle('col2.png', 'черный/аллюр')
+										+colors-product__circle('col5.png', 'черный/аллюр')
+										+colors-product__circle('col8.png', 'черный/аллюр')
+										+colors-product__circle('col6.png', 'черный/аллюр')
+										+colors-product__circle('col7.jpg', 'черный/аллюр')
 							.paginator.catalog-paginator
 								.page-toggle
 									+pagination-toggle('#', 1)
