--- a/src/pug/pages/ui/card-whith-label.pug
+++ b/src/pug/pages/ui/card-whith-label.pug
@@ -23,19 +23,19 @@ block content
 					+card--sale( 'new','new' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme ")
 						+button-store('Нет в наличии','#')
 						.colors-product
-							+colors-product__circle('col1.png')
-							+colors-product__circle('col2.png')
+							+colors-product__circle('col1.png', 'черный/аллюр')
+							+colors-product__circle('col2.png', 'черный/аллюр')
 
 				.col-6.col-md-3
 					+card--sale( '- 40%','' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 						+button-store('Нет в наличии','#')
 						.colors-product
-							+colors-product__circle('col1.png')
-							+colors-product__circle('col2.png')
-							+colors-product__circle('col4.png')
-							+colors-product__circle('col5.png')
-							+colors-product__circle('col6.png')
-							+colors-product__circle('col8.png')
+							+colors-product__circle('col1.png', 'черный/аллюр')
+							+colors-product__circle('col2.png', 'черный/аллюр')
+							+colors-product__circle('col4.png', 'черный/аллюр')
+							+colors-product__circle('col5.png', 'черный/аллюр')
+							+colors-product__circle('col6.png', 'черный/аллюр')
+							+colors-product__circle('col8.png', 'черный/аллюр')
 		strong Карточка с лейблом -40% 
 		pre.
 			+card--sale( '-40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
@@ -50,16 +50,16 @@ block content
 			+card--sale( 'new','new' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme ")
 				+button-store('Нет в наличии','#')
 				.colors-product
-					+colors-product__circle('col1.png')
-					+colors-product__circle('col2.png')
+					+colors-product__circle('col1.png', 'черный/аллюр')
+					+colors-product__circle('col2.png', 'черный/аллюр')
 		strong Карточка с лейблом -40% и цветовой схемой
 		pre.
 			+card--sale( '- 40%','' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme")
 				+button-store('Нет в наличии','#')
 				.colors-product
-					+colors-product__circle('col1.png')
-					+colors-product__circle('col2.png')
-					+colors-product__circle('col4.png')
-					+colors-product__circle('col5.png')
-					+colors-product__circle('col6.png')
-					+colors-product__circle('col8.png')
+					+colors-product__circle('col1.png', 'черный/аллюр')
+					+colors-product__circle('col2.png', 'черный/аллюр')
+					+colors-product__circle('col4.png', 'черный/аллюр')
+					+colors-product__circle('col5.png', 'черный/аллюр')
+					+colors-product__circle('col6.png', 'черный/аллюр')
+					+colors-product__circle('col8.png', 'черный/аллюр')
