--- a/src/pug/pages/ui/filter.pug
+++ b/src/pug/pages/ui/filter.pug
@@ -48,18 +48,18 @@ block content
 					.filter-icon-close
 					ul.filter-menu-l2.font-size-null
 						li
-							+filter-color-checkbox('col1.png')
-							+filter-color-checkbox('col2.png')
-							+filter-color-checkbox('col5.png')
-							+filter-color-checkbox('col4.png')
-							+filter-color-checkbox('col6.png')
-							+filter-color-checkbox('col7.jpg')
-							+filter-color-checkbox('col9.png')
-							+filter-color-checkbox('col8.png')
-							+filter-color-checkbox('col10.png')
-							+filter-color-checkbox('col11.png')
-							+filter-color-checkbox('col1.png')
-							+filter-color-checkbox('col2.png')
+							+filter-color-checkbox('col1.png', 'черный/аллюр')
+							+filter-color-checkbox('col2.png', 'черный/аллюр')
+							+filter-color-checkbox('col5.png', 'черный/аллюр')
+							+filter-color-checkbox('col4.png', 'черный/аллюр')
+							+filter-color-checkbox('col6.png', 'черный/аллюр')
+							+filter-color-checkbox('col7.jpg', 'черный/аллюр')
+							+filter-color-checkbox('col9.png', 'черный/аллюр')
+							+filter-color-checkbox('col8.png', 'черный/аллюр')
+							+filter-color-checkbox('col10.png', 'черный/аллюр')
+							+filter-color-checkbox('col11.png', 'черный/аллюр')
+							+filter-color-checkbox('col1.png', 'черный/аллюр')
+							+filter-color-checkbox('col2.png', 'черный/аллюр')
 							
 				li ПО ЦЕНЕ
 					.filter-icon-close
