--- a/src/pug/pages/ui/sales_hits.pug
+++ b/src/pug/pages/ui/sales_hits.pug
@@ -24,20 +24,20 @@ block content
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#', 'Сумка большая, коллекция "Рига"', '1 990р.')
 							+button-store('Нет в наличии','#')
 							.colors-product
-								+colors-product__circle('col1.png')
-								+colors-product__circle('col2.png')
-								+colors-product__circle('col4.png')
-								+colors-product__circle('col5.png')
-								+colors-product__circle('col6.png')
-								+colors-product__circle('col7.jpg')
+								+colors-product__circle('col1.png', 'черный/аллюр')
+								+colors-product__circle('col2.png', 'черный/аллюр')
+								+colors-product__circle('col4.png', 'черный/аллюр')
+								+colors-product__circle('col5.png', 'черный/аллюр')
+								+colors-product__circle('col6.png', 'черный/аллюр')
+								+colors-product__circle('col7.jpg', 'черный/аллюр')
 
 					.col-6.col-md-3.order-md-3.order-lg-2
 						+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', '#', 'Сумка большая, коллекция "Рига"', '4 893р.')
 							+button-cart('В корзину','#')
 							.colors-product
-								+colors-product__circle('col1.png')
-								+colors-product__circle('col2.png')
-								+colors-product__circle('col4.png')
-								+colors-product__circle('col5.png')
-								+colors-product__circle('col6.png')
-								+colors-product__circle('col7.jpg')
+								+colors-product__circle('col1.png', 'черный/аллюр')
+								+colors-product__circle('col2.png', 'черный/аллюр')
+								+colors-product__circle('col4.png', 'черный/аллюр')
+								+colors-product__circle('col5.png', 'черный/аллюр')
+								+colors-product__circle('col6.png', 'черный/аллюр')
+								+colors-product__circle('col7.jpg', 'черный/аллюр')
