--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -198,8 +198,8 @@
 // Псевдо чекбокс
 .filter-color-checkbox {
 	display: inline-block;
-	width: 16px;
-	height: 16px;
+	// width: 16px;
+	// height: 16px;
 	border-radius: 50%;
 	cursor: pointer;
 	transition: all 0.2s;
@@ -212,7 +212,7 @@
 // Добавляем рамку при выборе
 .label-color-checkbox input:checked+.filter-color-checkbox {
 	box-shadow: 0 0 0 1px @white,
-	0 0 0 3px @color-11;
+	0 0 0 3px @text-salad;
 }
 
 // Иконка плюс-минус
