ie filter checkbox fix

--- a/src/less/blocks/_filter.less
+++ b/src/less/blocks/_filter.less
@@ -170,8 +170,7 @@
 }
 
 .filter-checkbox {
-	width: 0.1px;
-	height: 0.1px;
+	display: none;
 }
 
 // .filter-checkbox.filter-checkbox-custom:checked:before {
